--- a/src/main/resources/templates/login-form.html
+++ b/src/main/resources/templates/login-form.html
@@ -24,13 +24,13 @@
                         <h3>Sign In</h3>
                         <p color="red" th:if="${loginErro}" class="error">Wrong user or password</p>
                         <div class="d-flex justify-content-end social_icon">
-                            <img
-                                    class="mb-4"
-                                    th:src="@{/images/oly.png}"
-                                    alt=""
-                                    width="140"
-                                    height="90"
-                            />
+<!--                            <img-->
+<!--                                    class="mb-4"-->
+<!--                                    th:src="@{/images/oly.png}"-->
+<!--                                    alt=""-->
+<!--                                    width="140"-->
+<!--                                    height="90"-->
+<!--                            />-->
                         </div>
                     </div>
                     <div class="card-body">
