--- a/src/main/resources/templates/patientRecord.html
+++ b/src/main/resources/templates/patientRecord.html
@@ -6,7 +6,7 @@
     <link rel="icon" sizes="14x9" th:href="@{images/oly.png}"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <title>
-        Oly Hospital mangager
+        Hospital mangager
     </title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no'
           name='viewport'/>
