--- a/src/main/resources/templates/profileAdmin.html
+++ b/src/main/resources/templates/profileAdmin.html
@@ -5,7 +5,7 @@
     <link rel="icon" sizes="14x9" th:href="@{images/oly.png}"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <title>
-        Oly Hospital mangager
+        Hospital mangager
     </title>
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no'
           name='viewport'/>
@@ -32,7 +32,7 @@
     <div class="sidebar" data-color="purple" data-background-color="white">
         <div class="logo">
             <a th:href="@{/}" class="simple-text logo-normal">
-                Oly Design
+                Profile
             </a>
         </div>
         <div class="sidebar-wrapper">
